# fastapi-analytics

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 391e838f08a3_reset_totale.py  94eff06c5453_create_users_table.py
src/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
src/app/routers/: analytics.py  users.py
src/app/service/: calculator.py
